--- a/exemples/CMakeLists.txt
+++ b/exemples/CMakeLists.txt
@@ -4,3 +4,4 @@ add_subdirectory(01_imGUIExample)
 add_subdirectory(01_imGUIDemo)
 # - draw 2 triangles (simplest example)
 add_subdirectory(01_Triangles)
+add_subdirectory(01_Triangles_OGL43)
